Adding two more StartOMX scripts

--- a/Transportation/assets/css/screen.css
+++ b/Transportation/assets/css/screen.css
@@ -391,15 +391,15 @@ input[type="checkbox"]:focus {
   border-radius: 5em;
   color: #fff;
   line-height: 4em;
-  padding-left: 1.5em;
+  padding-left: 1em;
   font-size: 18px;
   letter-spacing: 1px;
   white-space: nowrap;
   background-color: #00c59d;
-  background-image: url(../images/popup.svg);
-  background-size: 25px auto;
+  background-image: url(../images/ic_play_circle_outline_white_48px.svg);
+  background-size: 45px auto;
   background-repeat: no-repeat;
-  background-position: 16% 50%;
+  background-position: 12% 50%;
   text-transform: uppercase;
   -moz-transition: color 0.2s 0.3s, width 0.3s 0s;
   -o-transition: color 0.2s 0.3s, width 0.3s 0s;
