--- a/Transportation/assets/css/screen.css
+++ b/Transportation/assets/css/screen.css
@@ -576,7 +576,7 @@ input[type="checkbox"]:focus {
 }
 
 .bg3 {
-  /*background-image: url(../images/roads-bg.jpg);*/
+  background-image: url(../images/roads-bg.jpg);
   background-size: auto 110%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
