--- a/Transportation/assets/css/screen.css
+++ b/Transportation/assets/css/screen.css
@@ -560,7 +560,7 @@ input[type="checkbox"]:focus {
 }
 
 .bg {
-  /*background-image: url(../images/canals-bg.jpg);*/
+  background-image: url(../images/canals.jpg);
   background-size: auto 100%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
